# cli-speedtest

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SPEC.md  TODO.md  skills-lock.json
.github/workflows/: ci.yml  release.yml
docs/: MISSION.md  OPERATIONS.md  README.md  RELEASING.md  ROADMAP.md  SPEC.md  TECH-STACK.md
docs/adr/: 0001-resilient-provider-friendly-design.md  0002-dual-licensing.md  0003-hybrid-mode.md  0004-quick-mode-safety-limits.md  0005-self-update-mechanism.md  0006-self-update-integrity-verification.md  0007-user-agent-rotation.md
docs/agents/: domain.md
src/: client.rs  cooldown.rs  lib.rs  main.rs  menu.rs  models.rs  theme.rs  updater.rs  utils.rs
tests/: integration_test.rs
