[package]
name = "cli-speedtest"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["rustls-tls", "stream"] }
tokio = { version = "1", features = ["full"] }
indicatif = "0.17"
clap = { version = "4.4", features = ["derive"] }
futures-util = "0.3"
anyhow = "1.0"
futures = "0.3"
rand = "0.8"
bytes = "1.0"
