[package]
name = "cli-speedtest"
path = "src/main.rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Tirso Benedict J. Naza <benedictnaza@gmail.com>"]
description = "CLI based speedtest written on rust"
repository = "https://github.com/nazakun021/cli-speedtest"
license = "Apache-2.0"
keywords = ["cli", "network", "speedtest", "async"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
indicatif = "0.17"
clap = { version = "4.4", features = ["derive"] }
futures-util = "0.3"
anyhow = "1.0"
futures = "0.3"
rand = "0.9"
bytes = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
owo-colors = "3"
console = "0.15"
dialoguer = "0.11"
dirs = "5"

[dev-dependencies]
mockito = "1.4"
